--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "largest.js",
   "scripts": {
     "test": "jest --verbose",
-    "start": "node largest.js" 
+    "start": "node largest.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "jest": "^29.5.0"
+  },
+  "dependencies": {
+    "axios": "^1.4.0"
   }
 }
